app/styles/components/sidebar.scss
sidebar {

	top:0;
	right:0;
	bottom:0;
	width:400px;
	z-index:1000;
	display:flex;
	overflow:auto;
	cursor:pointer;
	position:fixed;
	overflow-x:hidden;
	transition:all 0.5s;
	flex-direction:column;
	align-items:flex-start;
	overscroll-behavior:contain;
	transform:translate3d(100%, 0, 0);
	background-color:var(--sidebar-color);

	@include media(max-width-600) {
		width:80%;
	}

	> div:nth-of-type(1) {

		width:100%;
		height:70px;
		z-index:100;
		display:flex;
		flex-shrink:0;
		padding:0 30px;
		align-items:center;
		justify-content:flex-end;

		i {
			font-size:24px;
			cursor:pointer;
			background:var(--sidebar-color);
			box-shadow:0 0 30px 30px var(--sidebar-color);
		}

	}

	> div:nth-of-type(2) {

		width:100%;

		nav {

			div {

				&:nth-of-type(1) {
					top:0;
					left:0;
					right:0;
					bottom:100px;
					display:flex;
					overflow:auto;
					position:absolute;
					flex-direction:column;
					padding:50px 30px 50px 30px;
				}

				&:nth-of-type(2) {
					left:0;
					right:0;
					bottom:0;
					padding:30px;
					display:flex;
					position:absolute;
					text-align:center;
					align-items:center;
					justify-content:center;
					background:var(--sidebar-color);
					box-shadow:0 -20px 30px var(--sidebar-color);
				}

				p {

					width:100%;
					display:block;
					font-size:16px;
					margin-top:30px;
					padding-bottom:10px;

				}

				a {

					width:100%;
					display:block;
					font-size:18px;
					padding:20px 0 20px 0;
					color:var(--text-color);
					transition:color 0.5s, border 0.5s;
					border-bottom:2px solid var(--border-color);

					&:not([button]):hover {
						color:var(--hover-color);
						border-bottom:2px solid var(--hover-color);
					}

					&[button] {
						width:100%;
						display:flex;
						border-bottom:0;
						text-align:center;
						align-items:center;
						justify-content:center;
					}

				}

			}

		}

	}

}

body[sidebar] {

	overflow:hidden;

	sidebar {
		box-shadow:0 0 20px rgba(0,0,0,0.7);
	}

	&[sidebar='over'] {
		sidebar {
			transform:translate3d(0, 0, 0);
		}
	}
	&[sidebar='full'] {
		sidebar {
			width:100%;
			transform:translate3d(0, 0, 0);
		}
	}
}

